
Added
-----

* New parser supports more natural operators such as +, -, ==, /, <, >

* Parser allows tail continuations

    users[0].name.toupper()[0] - Access user[0], attribute/item name, call
    toupper on name, the access the first item/character of the result

* Hook tag allows calling registered hooks.

    Hooks can be registered that take env, template, line, renderer, scope,
    and params.  Tags {% hook ... ; with ... %} and {% rhook ... ; with ... %}
    can then be used to call the hooks.  The call just returns if the hook
    doesn't exist. Hooks may be used to generate output directly with renderer,
    include other templates via env, template.render_nested, set variables in
    the scope, etc.

* Userdata can be passed to a template during render.

    Userdata passed can then be passed on to hooks and in the future special
    functions. These hooks and functions can then access the userdata.

* Support for special functions

    Special functions take a list of env, template, line, scope, params and
    instead of having the parameters automatically evaluated, they are the
    expression nodes.  This allows special functions like defined and default
    to exist which can evaluate a node when needed, check for errors, etc.

* Support for dictionarys in the template.

    Dictionary syntax borrows from list syntax: [key:value, key:value, ...]
    An empty dictionary can be created as [:]

* Support for iteration or increment loops.

    An iteration loop has the same syntax:

        {% for var in items %} or {% for var,pos in items %}

    An increment loop takes three segments, init, test, and incr.  The
    init and incr are multi-assign expressions segments while test is
    an expression:

        {% for i = 0, j = 0 ; i < 10 ; i = i + 1 %}

    In all othere ways they are the same, ending with {% endfor %}.  The
    {% else %} tag behaves the same, being rendered only if the loop didn't
    have any iterations.